--- a/startpage.html
+++ b/startpage.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <title>Domácí start</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Fix: žádný 404 na favicon -->
+  <link rel="icon" href="data:," />
+
   <style>
     :root{
       --bg:#0f1720; --panel:#14212b; --border:#1e2c37; --text:#dbe6ef; --muted:#9bb3c6;
@@ -113,8 +116,7 @@
   CONFIG.weather = { lat:50.0704, lon:14.4709, tz:"Europe/Prague" };
   CONFIG.departures = CONFIG.departures || {};
   CONFIG.departures.proxyUrl = "https://golemioproxy.m88wqgcdpd.workers.dev"; // Worker proxy (bez koncové /)
-  // Přidej oba tram perony + vlakovou zastávku:
-  CONFIG.departures.ids = "U680Z1P,U680Z2P,U680Z301";
+  CONFIG.departures.ids = "U680Z1P,U680Z2P,U680Z301"; // A + B + vlak
   CONFIG.departures.title = "Slavia – nádraží Eden";
   CONFIG.departures.limit = 12;
   CONFIG.departures.mode = "mins"; // "mins" | "time"
@@ -183,7 +185,7 @@
   }
 
   // ---------- DEPARTURES (přes Worker) ----------
-  let currentDir = "A"; // A = peron A (směr Koh-i-noor), B = peron B (směr Kubánské náměstí)
+  let currentDir = "A"; // A = Koh-i-noor, B = Kubánské náměstí
 
   async function fetchDepartures({ids, limit, minutesBefore=0, minutesAfter=45}) {
     const base = CONFIG.departures.proxyUrl.replace(/\/+$/,'') + "/v2/pid/departureboards";
@@ -213,10 +215,9 @@
     listEl.innerHTML = "";
     const deps = Array.isArray(data.departures) ? data.departures.slice(0, CONFIG.departures.limit*2) : [];
 
-    // Filtr: tramvaje podle platform_code A/B; vlaky (type===2) vždy zobrazit
     const filtered = deps.filter(d => {
       const type = d?.route?.type;
-      if (type === 2) return true; // S-linka vlaky – obousměrně
+      if (type === 2) return true; // S-linky (vlaky) zobrazit vždy
       const plat = (d?.stop?.platform_code || "").toUpperCase();
       return plat === currentDir;
     });
@@ -226,9 +227,7 @@
       return;
     }
 
-    // omez na vizuální limit
     const take = filtered.slice(0, CONFIG.departures.limit);
-
     for(const d of take){
       const row = document.createElement("div");
       row.className = "dep";
@@ -292,14 +291,19 @@
 
   // ---------- NEWS (CORS-safe) ----------
   async function loadNews(){
+    const feedHttps = "https://r.jina.ai/https://www.irozhlas.cz/rss/irozhlas";
+    const feedHttp  = "https://r.jina.ai/http://www.irozhlas.cz/rss/irozhlas";
     try{
-      // OPRAVA: nepoužívat encodeURIComponent na celou URL – r.jina.ai chce čistou adresu za /http://
-      const url = "https://r.jina.ai/http://www.irozhlas.cz/rss/irozhlas";
-      const res = await fetch(url, { cache:"no-store" });
+      // Fix: používej https variantu; pokud selže (422), spadni na http
+      let res = await fetch(feedHttps, { cache:"no-store" });
+      if(!res.ok) {
+        // fallback
+        res = await fetch(feedHttp, { cache:"no-store" });
+      }
       if(!res.ok) throw new Error(`RSS nelze načíst (HTTP ${res.status}).`);
       const txt = await res.text();
 
-      // Hrubý extraktor titulků/odkazů z textového výstupu
+      // jednoduchý extraktor (Jina převádí XML na plain text)
       const items = [];
       const titleRe = /^title:\s*(.+)$/gmi;
       const linkRe  = /^link:\s*(https?:\/\/[^\s]+)$/gmi;
